fix styles/paragraph spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,10 @@ a:hover {
     text-decoration: none;
 }
 
-
+p {
+    margin-top: 0;
+    margin-bottom: 20px;
+}
 
 body {
     /* font-family: 'Martian Mono', 'Courier New', Courier, monospace; */
